# OpenFisca-MCP

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  project-plan.md  pyproject.toml
docs/phase1/: 01-web-api-surface.md  02-entity-model.md  03-variable-parameter-schemas.md  04-simulation-lifecycle.md  05-error-taxonomy.md  README.md
docs/phase4/: README.md  compatibility-report.md
docs/tools/: README.md  calculate.md  describe_variable.md  get_parameter.md  list_entities.md  list_parameters.md  list_variables.md  search_variables.md  trace_calculation.md  validate_situation.md
scripts/: docker-entrypoint.sh  serve.sh
src/openfisca_mcp/: __init__.py  client.py  errors.py  server.py
tests/: conftest.py  generate_golden.py  test_aotearoa_compatibility.py  test_api_baseline.py  test_france_compatibility.py  test_mcp_tools.py
tests/fixtures/: couple.json  family_with_children.json  multi_household.json  single_person.json
tests/fixtures/golden/: README.md  calculate_couple_taxes.json  calculate_family_benefits.json  calculate_income_tax.json  entities.json  parameters_list.json  trace_income_tax.json  variable_age.json  variable_housing_allowance.json  variable_income_tax.json  variable_salary.json  variables_list.json
